--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1.4.6",
-    "vue": "^2.6.14"
+    "axios": "^0.26.1",
+    "vue": "^2.6.14",
+    "vue-axios": "^3.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^1.7.1",
