--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@vue/composition-api": "^1.4.6",
     "axios": "^0.26.1",
     "vue": "^2.6.14",
-    "vue-axios": "^3.4.1"
+    "vue-axios": "^3.4.1",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-legacy": "^1.7.1",
+    "@vue/cli-plugin-router": "~5.0.0",
     "@vue/runtime-dom": "^3.2.31",
     "unplugin-vue2-script-setup": "^0.9.3",
     "vite": "^2.9.16",
